--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,6 @@ jobs:
         run: |
             echo "${{secrets.KEY_F}}" > private_key && chmod 600 private_key
             ssh -o StrictHostKeyChecking=no -i private_key ubuntu@ec2-35-172-80-252.compute-1.amazonaws.com   "
-               cd /var/www/html/web_flare  &&
+               cd /spring-petclinic-main  &&
                sudo git pull "
      
