--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,21 @@ permissions:
 
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Compilando
+        run: javac src/Main.java
+      
+      - name: Executar
+        run: java src/Main.java
   deploy:
 
     runs-on: ubuntu-latest
