--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,31 +17,33 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-      - name: Compilando
-        run: java src/main/java/org/springframework/samples/petlinc/PetClinicApplication.java
-      
-      - name: Executar
-        run: java src/main/java/org/springframework/samples/petlinc/PetClinicApplication.java
-  deploy:
 
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Conectando
-        run: |
-            echo "${{secrets.KEY_F}}" > private_key && chmod 600 private_key
-            ssh -o StrictHostKeyChecking=no -i private_key ubuntu@ec2-35-172-80-252.compute-1.amazonaws.com   "
-               cd /spring-petclinic-main  &&
-               sudo git pull "
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package -DskipTests --file pom.xml
+
+    - name: Render Deploy Action
+      uses: johnbeynon/render-deploy-action@v0.0.8
+      with:
+        service-id: srv-cr6qrttds78s73c2sb4g 
+        api-key: rnd_D7dWpTNUbzAIOKXoQmdNjWg8n5Dk
+          
+    - name: Deploy na EC2
+      run: |
+           echo "${{secrets.KEY_F}}" >private_key && chmod 400 private_key
+           ssh -o StrictHostKeyChecking=no -i "private_key" ubuntu@ec2-35-172-80-252.compute-1.amazonaws.com "
+                     cd /home/ubuntu/spring-petclinic-main &&
+                     git pull &&
+                     mvn clean package -DskipTests &&
+                     ./executar.sh "
+                                          
      
