--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package -DskipTests --file pom.xml
+      run: mvn -B package -DskipTests --file spring-petclinic-main/pom.xml
 
     - name: Render Deploy Action
       uses: johnbeynon/render-deploy-action@v0.0.8
