--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,7 +43,6 @@ jobs:
            ssh -o StrictHostKeyChecking=no -i "private_key" ubuntu@ec2-35-172-80-252.compute-1.amazonaws.com "
                      cd POC/spring-petclinic-main &&
                      git pull &&
-                     mvn clean package -DskipTests &&
-                     ./executar.sh "
+                     mvn clean package -DskipTests"
                                           
      
